fixed modal height for all content to be visible on mobile devices

--- a/src/helpers/modal.scss
+++ b/src/helpers/modal.scss
@@ -3,7 +3,8 @@
   transform: translateY(-50%);
   width: 100%;
   max-width: 600px;
-  max-height: none;
+  // height: 100%;
+  // max-height: none;
   margin: 0 auto;
   background-color: transparent;
   border: 0;
@@ -21,7 +22,7 @@
 
   .modal-container {
     position: relative;
-    height: 100%;
+    // height: 100%;
     background-color: white;
     margin: 1em;
     padding: 1em;
